[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/structures/turret.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/structures/tower.gd" type="Script" id=2]
[ext_resource path="res://scenes/structures/tower_diamond.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui elements/HealthBar3D.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sound/structures/tower_hum.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sound/structures/tower_sear.wav" type="AudioStream" id=6]
[ext_resource path="res://addons/mixing-desk/sound/3d/scatter_cont.gd" type="Script" id=7]
[ext_resource path="res://assets/audio/sound/enemies/unillama_emerge.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/sound/structures/tower_crumble.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/sound/structures/tower_crumble_2.wav" type="AudioStream" id=10]
[ext_resource path="res://addons/mixing-desk/sound/3d/polysound.gd" type="Script" id=11]
[ext_resource path="res://assets/audio/sound/structures/tower_rise.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/sound/weapons/laser_sword_swing.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/sound/weapons/laser_shot.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/shaders/laser_mat.tres" type="Material" id=15]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 12, 70, 12 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -6, 35, 6, 6, 35, 6, -6, -35, 6, 6, 35, 6, 6, -35, 6, -6, -35, 6, 6, 35, -6, -6, 35, -6, 6, -35, -6, -6, 35, -6, -6, -35, -6, 6, -35, -6, 6, 35, 6, 6, 35, -6, 6, -35, 6, 6, 35, -6, 6, -35, -6, 6, -35, 6, -6, 35, -6, -6, 35, 6, -6, -35, -6, -6, 35, 6, -6, -35, 6, -6, -35, -6, 6, 35, 6, -6, 35, 6, 6, 35, -6, -6, 35, 6, -6, 35, -6, 6, 35, -6, -6, -35, 6, 6, -35, 6, -6, -35, -6, 6, -35, 6, 6, -35, -6, -6, -35, -6 )

[sub_resource type="CylinderMesh" id=3]
resource_local_to_scene = true
material = ExtResource( 15 )
top_radius = 0.02
bottom_radius = 0.2
height = 1.0

[sub_resource type="CubeMesh" id=4]
resource_local_to_scene = true
material = ExtResource( 15 )
size = Vector3( 15, 15, 15 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_diffuse_mode = 4
params_depth_draw_mode = 2
params_billboard_mode = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=8]
radius = 9.0

[sub_resource type="Animation" id=9]
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/diamond:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -36.617, 0, -48.523 ), Vector3( -36.617, 360, -48.523 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/diamond:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7.5, 15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 48, -0.816 ), Vector3( 0, 50, -0.816 ), Vector3( 0, 48, -0.816 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "die"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath("body/turret")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/turret:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 4, 4, 4 ), Vector3( 0.01, 0.01, 0.01 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("body/turret/beam_point")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/diamond:mesh:material:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 2.46229 ),
"update": 0,
"values": [ Color( 0.6, 0.145098, 0.145098, 0.768627 ), Color( 0.6, 0.145098, 0.145098, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("body/diamond")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("body/HealthBar3D")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("beamparticles")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("body:translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.2, 4, 4.4 ),
"transitions": PoolRealArray( 1, 3.605, 0.870551 ),
"update": 0,
"values": [ Vector3( 0, 35, 0 ), Vector3( 0, 35, 0 ), Vector3( 0, 600, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 2.2, 4, 4.4 ),
"transitions": PoolRealArray( 1.68179, 2.46229, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.293574, 1, 0.293574 ), Vector3( 0.01, 25, 0.01 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("body")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2.2, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "begin_rumble"
}, {
"args": [  ],
"method": "send_xp"
}, {
"args": [ "queue_free" ],
"method": "call_deferred"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("hum:unit_db")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 11.3137, 1 ),
"update": 0,
"values": [ -4.0, -60.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("hum2:unit_db")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 4.9 ),
"transitions": PoolRealArray( 13.4543, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("hum:pitch_scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.7, 0.4 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("hum2:pitch_scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.4 ]
}
tracks/15/type = "method"
tracks/15/path = NodePath("blocks")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 1.6, 4.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}
tracks/16/type = "method"
tracks/16/path = NodePath("disappear")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 3.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("body/diamond:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3.73213, 1 ),
"update": 0,
"values": [ Color( 0.6, 0.145098, 0.145098, 0 ), Color( 0.6, 0.145098, 0.145098, 0.85098 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.225313, 1 ),
"update": 0,
"values": [ Vector3( 0, -75, 0 ), Vector3( 0, 35, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activate"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hum:unit_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, -4.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hum2:unit_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("rise")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null ],
"method": "play"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("blocks")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="SphereShape" id=12]
radius = 300.0

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
direction = Vector3( 0, 12, 0 )
spread = 66.64
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.39
angular_velocity_random = 1.0
radial_accel = 1.0
angle = 309.7
angle_random = 0.99
scale = 15.0
scale_random = 0.7

[sub_resource type="SpatialMaterial" id=14]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_color = Color( 0.6, 0.145098, 0.145098, 0.768627 )

[sub_resource type="PlaneMesh" id=15]
material = SubResource( 14 )
size = Vector2( 0.05, 0.05 )

[node name="tower" type="Spatial"]
script = ExtResource( 2 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -75, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="main_body" type="StaticBody" parent="body"]

[node name="CollisionShape" type="CollisionShape" parent="body/main_body"]
shape = SubResource( 2 )

[node name="turret" parent="body" instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 48.3133, 0 )
track_factor = 0.02

[node name="beam_point" type="Spatial" parent="body/turret"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 0, -0.844832 )

[node name="beam" type="MeshInstance" parent="body/turret/beam_point"]
transform = Transform( 1, 0, 0, 0, 0.00366528, 0.999993, 0, -0.999993, 0.00366528, 0, 0, -0.5 )
mesh = SubResource( 3 )
material/0 = null

[node name="RayCast" type="RayCast" parent="body/turret"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.719032 )
cast_to = Vector3( 0, 0, -300 )

[node name="diamond" type="MeshInstance" parent="body"]
transform = Transform( 0.662319, 0.749221, 0, -0.601355, 0.531604, 0.596463, 0.446883, -0.395049, 0.80264, 0, 48, -0.816 )
mesh = SubResource( 4 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="body"]
transform = Transform( 1.0055, 0, 0, 0, 1, 0, 0, 0, 1.0055, 0, 50.6444, 0 )
light_color = Color( 0.901961, 0.14902, 0.14902, 1 )
light_energy = 9.13
shadow_enabled = true
omni_range = 144.463
omni_attenuation = 0.574349

[node name="HealthBar3D" type="Sprite3D" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 62.6628, 0 )
material_override = SubResource( 5 )
cast_shadow = 0
double_sided = false
alpha_cut = 2
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="body/HealthBar3D"]
size = Vector2( 2000, 200 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="ProgressBar" type="ProgressBar" parent="body/HealthBar3D/Viewport"]
margin_right = 2000.0
margin_bottom = 200.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="diamond_body" type="KinematicBody" parent="body"]
transform = Transform( 0.861015, 0.973988, 0, -0.781762, 0.691085, 0.775402, 0.580948, -0.513564, 1.04343, 0, 48, -0.816 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="body/diamond_body"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.3
anims/cubeanim = SubResource( 9 )
anims/die = SubResource( 10 )
anims/rise = SubResource( 11 )

[node name="detect" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30143, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="detect"]
shape = SubResource( 12 )

[node name="beamparticles" type="Particles" parent="."]
visible = false
amount = 40
lifetime = 0.5
local_coords = false
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="sear" type="AudioStreamPlayer3D" parent="beamparticles"]
stream = ExtResource( 6 )
unit_db = -15.0
unit_size = 10.0
pitch_scale = 2.0
bus = "FX"

[node name="OmniLight2" type="OmniLight" parent="beamparticles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
light_color = Color( 0.901961, 0.14902, 0.14902, 1 )
light_energy = 14.63
shadow_enabled = true
omni_range = 8.3
omni_attenuation = 0.574349

[node name="hum" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = -60.0
unit_size = 90.0
pitch_scale = 0.7
bus = "Ambience"

[node name="hum2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = -60.0
unit_size = 100.0
pitch_scale = 0.5
bus = "Ambience"

[node name="blocks" type="Spatial" parent="."]
script = ExtResource( 7 )
autostart = false
volume_range = 4.0
pitch_range = 0.3
scatter_range = 40.0
min_time = 0.1
max_time = 1.0
timeout = 0.0

[node name="1" type="AudioStreamPlayer3D" parent="blocks"]
stream = ExtResource( 8 )
unit_size = 25.0
bus = "FX"

[node name="2" type="AudioStreamPlayer3D" parent="blocks"]
stream = ExtResource( 9 )
unit_size = 25.0
pitch_scale = 1.2
bus = "FX"

[node name="3" type="AudioStreamPlayer3D" parent="blocks"]
stream = ExtResource( 9 )
unit_size = 25.0
pitch_scale = 0.7
bus = "FX"

[node name="4" type="AudioStreamPlayer3D" parent="blocks"]
stream = ExtResource( 10 )
unit_size = 25.0
pitch_scale = 0.7
bus = "FX"

[node name="5" type="AudioStreamPlayer3D" parent="blocks"]
stream = ExtResource( 10 )
unit_size = 25.0
pitch_scale = 1.1
bus = "FX"

[node name="rise" type="Spatial" parent="."]
script = ExtResource( 11 )

[node name="1" type="AudioStreamPlayer3D" parent="rise"]
stream = ExtResource( 12 )
unit_db = 6.0
unit_size = 50.0
bus = "FX"

[node name="disappear" type="Spatial" parent="."]
script = ExtResource( 11 )

[node name="1" type="AudioStreamPlayer3D" parent="disappear"]
stream = ExtResource( 13 )
unit_size = 100.0
pitch_scale = 0.4
bus = "FX"

[node name="2" type="AudioStreamPlayer3D" parent="disappear"]
stream = ExtResource( 14 )
unit_size = 100.0
pitch_scale = 0.12
bus = "FX"
[connection signal="body_entered" from="detect" to="." method="on_enter"]
